Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/BD_AddressDefinition__mdt.object-meta.xml
<CustomObject>
    <label>Address Definition</label>
    <pluralLabel>Address Definitions</pluralLabel>
</CustomObject>