Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Address_Line_2_Field__c.field-meta.xml
<CustomField>
    <fullName>BD_Address_Line_2_Field__c</fullName>
    <label>Address Line 2 Field</label>
    <metadataRelationshipControllingField>BD_AddressDefinition__mdt.BD_Address_SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Address_Definitions1</relationshipLabel>
    <relationshipName>Address_Definitions1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>