Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Address_SObject__c.field-meta.xml
<CustomField>
    <fullName>BD_Address_SObject__c</fullName>
    <label>Address SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Address_Definitions</relationshipLabel>
    <relationshipName>Address_Definitions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>