Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Calculate_Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>BD_Calculate_Formatted_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Formatted Address</label>
    <type>Checkbox</type>
</CustomField>