Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Calculate_Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>BD_Calculate_Geo_Location__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Calculate Geo Location</label>
    <type>Checkbox</type>
</CustomField>