Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Calculate_Timezone__c.field-meta.xml
<CustomField>
    <fullName>BD_Calculate_Timezone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Calculate Timezone</label>
    <type>Checkbox</type>
</CustomField>