Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Country_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>BD_Country_Name_Field__c</fullName>
    <label>Country Name Field</label>
    <metadataRelationshipControllingField>BD_AddressDefinition__mdt.BD_Address_SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Address_Definitions5</relationshipLabel>
    <relationshipName>Address_Definitions5</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>