Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Formatted_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>BD_Formatted_Address_Type__c</fullName>
    <label>Formatted Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Line</fullName>
                <default>true</default>
                <label>Single Line</label>
            </value>
            <value>
                <fullName>Multi Line</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>