Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Group_By_for_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>BD_Group_By_for_Geolocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group By for Geolocation</label>
    <type>Checkbox</type>
</CustomField>