Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Ordinal__c.field-meta.xml
<CustomField>
    <fullName>BD_Ordinal__c</fullName>
    <label>Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>