Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>BD_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <metadataRelationshipControllingField>BD_AddressDefinition__mdt.BD_Address_SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Address_Definitions4</relationshipLabel>
    <relationshipName>Address_Definitions4</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>