Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/fields/BD_State_Province_Field__c.field-meta.xml
<CustomField>
    <fullName>BD_State_Province_Field__c</fullName>
    <label>State / Province Field</label>
    <metadataRelationshipControllingField>BD_AddressDefinition__mdt.BD_Address_SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Address_Definitions3</relationshipLabel>
    <relationshipName>Address_Definitions3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>