Perkin-UAT/force-app/main/default/objects/BD_AddressDefinition__mdt/listViews/All_Address_Definitions.listView-meta.xml
<ListView>
    <fullName>All_Address_Definitions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BD_Address_SObject__c</columns>
    <columns>BD_Ordinal__c</columns>
    <columns>BD_Calculate_Formatted_Address__c</columns>
    <columns>BD_Group_By_for_Geolocation__c</columns>
    <columns>BD_Calculate_Geo_Location__c</columns>
    <columns>BD_Calculate_Timezone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Address Definitions</label>
    <language>en_US</language>
</ListView>